  gracefully.
* ISO generation: Long project titles are properly
  truncated when preparing a volume name for mkisofs.
* Custom Anaconda artwork is automatically extracted
  from anaconda-images on the project repository, if exists,
  and inserted into the product.img overlay.
* A project-specific conaryrc is inserted into the product.img
  overlay.

Changes in 0.6.2:

* Shows only published releases in the releases sidebar.
* Fix a bug where a user would end up in the authrepo
  even if the confirmation email failed to send.
* Made the email domain checks a little smarter to allow
  sending to localhost and siteHost.
* The image generation modules will look for their config
  files in the same directory that job-server found its
  config file.

Changes in 0.6.1:

* Downloads of the first file in a release are counted.
* Breadcrumbs in the repository trove file list are fixed.
* Sort releases in "Recent Releases" sidebar by version, descending.

Changes in 0.6.0:

* Sidebars are collapsable for more screen real estate.
* Symlinks are now properly displayed as such in the trove files view.
* The buggy member edit popup has been replaced with "Promote"
  and "Demote" buttons.
* Releases can now have semi-arbitrary data attached, defined by
  a template in the image generator.
* Some bugs have been fixed in the code that retrieves the list of
  group-* troves for the AJAX-powered new release page.
* Using a separate domain name for hosted projects is now possible.
* Editing a project title is new possible.
* Many small fixes and improvements.

Changes in 0.5.4:

* Many UI and documentation fixes.
* "External" projects can be added which point to repositories
  not handled by mint.
* The popularity and activity metrics have been improved.
* The repository browser now only shows letters for which troves
  actually exist.
* Some bugs in the commitAction prepration have been fixed.

Changes in 0.5.3:

* The cached or pre-existing changesets are now double checked against